# AdventOfCode

./: pyproject.toml
2018/Day01/: day_01.py
2018/Day02/: day_02.py
2018/Day03/: day_03.py
2018/Day04/: day_04.py
2019/Day01/: day_01.py
2019/Day02/: day_02.py  test_day_02.py
2019/Day03/: day_03.py  test_day_03.py
2019/Day04/: day_04.py
2019/Day05/: day_05.py
2020/Day01/: day_01.py
2020/Day02/: day_02.py  test_day_02.py
2020/Day03/: day_03.py  test_day_03.py
2020/Day04/: day_04.py  test_day_04.py
2021/Day01/: day_01.py  test_day_01.py
2021/Day02/: day_02.py
2021/Day03/: day_03.py  test_day_03.py
2021/Day04/: day_04.py  test_day_04.py
2022/Day01/: day_01.py  day_01.py~
