[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Harry Wright <harry@wright.dev>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pytest = "^6.2.1"
numpy = "^1.21.4"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
