[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Harry Wright <harry@wright.dev>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "^6"
numpy = "^1"
advent-of-code-data = "^1"

[tool.poetry.dev-dependencies]

[tool.pyright]
venvPath = "/home/harry/.cache/pypoetry/virtualenvs"
venv = "adventofcode-L9K_8rV3-py3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
